# SwStack

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
SwCreator/: CMakeLists.txt  SwCreatorUi.h
SwCreator/app/: SwCreatorApp.cpp  SwCreatorController.cpp  SwCreatorController.h  SwCreatorDocument.cpp  SwCreatorDocument.h  SwCreatorEditorApp.cpp  SwCreatorSnapshot.cpp
SwCreator/commands/: SwCreatorCommand.h  SwCreatorCommandStack.cpp  SwCreatorCommandStack.h  SwCreatorCreateWidgetCommand.cpp  SwCreatorCreateWidgetCommand.h  SwCreatorDeleteWidgetCommand.cpp  SwCreatorDeleteWidgetCommand.h
SwCreator/designer/: SwCreatorFormCanvas.cpp  SwCreatorFormCanvas.h  SwCreatorMainPanel.cpp  SwCreatorMainPanel.h  SwCreatorSystemDragDrop.cpp  SwCreatorSystemDragDrop.h  SwCreatorWorkspace.cpp  SwCreatorWorkspace.h
SwCreator/designer/dialogs/: SwCreatorDockDialog.cpp  SwCreatorStringListDialog.cpp  SwCreatorStringListDialog.h  SwCreatorTextEditDialog.cpp  SwCreatorTextEditDialog.h
SwCreator/designer/inspector/: SwCreatorPropertyInspector.cpp  SwCreatorPropertyInspector.h
SwCreator/designer/palette/: SwCreatorPaletteItem.cpp  SwCreatorPaletteItem.h  SwCreatorPalettePage.cpp  SwCreatorPalettePage.h  SwCreatorWidgetPalette.cpp  SwCreatorWidgetPalette.h  SwCreatorWidgetRegistry.h
SwCreator/editor/: SwCreatorEditorCodeSupport.cpp  SwCreatorEditorCodeSupport.h  SwCreatorEditorLanguageSupport.h  SwCreatorEditorPage.cpp  SwCreatorEditorPage.h  SwCreatorEditorPanel.cpp  SwCreatorEditorPanel.h  SwCreatorEditorPaths.h  SwCreatorEditorTabWidget.cpp  SwCreatorEditorTabWidget.h
SwCreator/serialization/: SwCreatorQtUiImporter.cpp  SwCreatorQtUiImporter.h  SwCreatorSwuiSerializer.cpp  SwCreatorSwuiSerializer.h
SwCreator/theme/: SwCreatorTheme.h
SwCreator/ui/: SwCreatorFormCanvas.cpp  SwCreatorFormCanvas.h  SwCreatorMainPanel.cpp  SwCreatorMainPanel.h  SwCreatorShell.cpp  SwCreatorShell.h  SwCreatorWorkspace.cpp  SwCreatorWorkspace.h
SwCreator/ui/dialogs/: SwCreatorDockDialog.cpp  SwCreatorDockDialog.h  SwCreatorStringListDialog.cpp  SwCreatorStringListDialog.h  SwCreatorTextEditDialog.h
SwCreator/ui/inspector/: SwCreatorPropertyInspector.cpp
SwCreator/ui/palette/: SwCreatorPaletteEntry.h  SwCreatorPaletteItem.cpp  SwCreatorPaletteItem.h  SwCreatorPalettePage.cpp  SwCreatorPalettePage.h  SwCreatorWidgetPalette.cpp  SwCreatorWidgetRegistry.h
SwProjetNode/: README.md  SwProjetNode.launch.json  run.bat  run.sh
android/SwAndroidHost/: AndroidManifest.xml  CMakeLists.txt  build-and-install.ps1  main.cpp
docs/: ARCHITECTURE.md  BUILD_AND_RUN.md  CODEMAP.md  DEBUGGING.md  DECISIONS.md  GUI_QT_PARITY.md  PUBLIC_API.md  README.md  REFACTOR_LOG.md  SOURCE_LAYOUT.md
exemples/01-SimpleWindow/: CMakeLists.txt  GuiApplication.cpp
exemples/02-CoreApplication/: CMakeLists.txt  ConsoleApplication.cpp
exemples/03-TcpServer/: CMakeLists.txt  TcpServer.cpp
exemples/04-NetworkAccesManager/: CMakeLists.txt  NetworkAccesManager.cpp
exemples/05-InteractiveConsoleApplication/: CMakeLists.txt  InteractiveConsoleApplication.cpp
exemples/06-DebugExemple/: CMakeLists.txt  DebugExemple.cpp
exemples/07-ServeurDebug/: CMakeLists.txt  ServeurDebug.cpp
exemples/09-MultiRuntime/: CMakeLists.txt  MultiRuntime.cpp
exemples/10-SwProcessExample/: CMakeLists.txt  SwProcessExample.cpp
exemples/14-PingPong/: CMakeLists.txt  PingPong.cpp  PingPongGameWidget.cpp  PingPongGameWidget.h  ScoreBanner.cpp  ScoreBanner.h
exemples/16-GpioMonitor/: CMakeLists.txt  GpioMonitorExample.cpp
exemples/16-VideoWidget/: CMakeLists.txt  VideoWidgetExample.cpp
exemples/17-MjpegServer/: CMakeLists.txt  MjpegServer.cpp
exemples/18-MjpegClient/: CMakeLists.txt  MjpegClient.cpp
exemples/18-SliderDemo/: CMakeLists.txt  SliderDemo.cpp
exemples/19-RtspUdpClient/: CMakeLists.txt  RtspUdpClient.cpp
exemples/20-RtspVideoWidget/: CMakeLists.txt  RtspVideoWidget.cpp
exemples/21-UdpProbe/: CMakeLists.txt  UdpProbe.cpp
exemples/22-TileServer/: CMakeLists.txt  HttpSession.h  MapDatabase.h  TileServer.cpp
exemples/22-TileServer/http/: HttpMessage.h  HttpRouteHandler.h  HttpRouter.h  HttpServer.h
exemples/22-TileServer/routes/: MapApiRouteHandler.h  StaticRouteHandler.h  TileRouteHandler.cpp  TileRouteHandler.h
exemples/22-TileServer/www/: index.html
exemples/23-ConfigurableObjectDemo/: CMakeLists.txt  ConfigurableObjectDemo.cpp  DemoSubscriber.cpp  DemoSubscriber.h  RpcBenchmarkSequence.md  RpcClientDemo.cpp  RpcFactoryDemo.cpp
exemples/24-ComponentPlugin/: CMakeLists.txt  PingPongPlugin.cpp
exemples/25-IpcPerfMonitor/: CMakeLists.txt  IpcPerfMonitor.cpp  PERF_COMPARISON.md  TestIpcPerfMonitor.ps1
exemples/26-IpcThreadStress/: CMakeLists.txt  IpcThreadStress.cpp
exemples/27-IpcVideoFrameRingBuffer/: CMakeLists.txt  IpcVideoFrameRingBuffer.cpp
exemples/28-IpcRingBufferCameraPlayer/: CMakeLists.txt  IpcRingBufferCameraMain.cpp  IpcRingBufferCameraPublisher.cpp  IpcRingBufferCameraPublisher.h  IpcRingBufferFrameMeta.h  IpcRingBufferPlayer.cpp  IpcRingBufferPlayer.h  IpcRingBufferPlayerMain.cpp  IpcRingBufferVideoWidget.cpp  IpcRingBufferVideoWidget.h
exemples/29-IpcPingPongNodes/: CMakeLists.txt  SwPingNode.cpp  SwPongNode.cpp
exemples/32-WhatsApp/: CMakeLists.txt  FIREBASE_SETUP.md  WaAttachMenuPopup.cpp  WaAttachMenuPopup.h  WaAvatarCircle.cpp  WaAvatarCircle.h  WaChatWallpaper.cpp  WaChatWallpaper.h  WaConversationListDelegate.cpp  WaConversationListDelegate.h  WaConversationRowWidget.cpp  WaConversationRowWidget.h  WaDemoAssets.cpp  WaDemoAssets.h  WaEmojiPickerPopup.cpp  WaEmojiPickerPopup.h  WaIconButton.cpp  WaIconButton.h  WaLocalStore.cpp  WaLocalStore.h  WaLoginPage.cpp  WaLoginPage.h  WaMediaImageLoader.cpp  WaMediaImageLoader.h  WaMediaViewerDialog.cpp  WaMediaViewerDialog.h  WaMessageEdit.cpp  WaMessageEdit.h  WaThreadBubbleDelegate.cpp  WaThreadBubbleDelegate.h  WhatsAppWidget.cpp  WhatsAppWidget.h  WhatsAppWindow.cpp  WhatsAppWindow.h  main.cpp  run_firebd_demo.ps1
http_app_quickstart_www/: index.html  proxy-admin.html
tools/: buildSwCreator.bat  buildSwCreator.sh  (+2 more)
(+813 files in other folders)
